--- a/scss/blocks/_promo.scss
+++ b/scss/blocks/_promo.scss
@@ -1,8 +1,18 @@
 .promo {
-    min-height: 100vh;
-    position: relative;
-    background: url('../img/main2.jpg') no-repeat 50%/cover;
-    padding-top: 205px;
+    &__opacity {
+        // background-color: rgba($color: #fff, $alpha: 0);
+        min-height: 100vh;
+        padding-top: 205px;
+    }
+    &__wrapper {
+        background: url("/img/photo.jpeg") right no-repeat;
+        position: relative;
+        background-color: #ae4f57;
+    }
+
+    &__img {
+        min-height: 100vh;
+    }
     &__title {
         width: 535px;
         margin-top: 10px;
