main img changed

--- a/scss/blocks/_promo.scss
+++ b/scss/blocks/_promo.scss
@@ -5,7 +5,7 @@
         padding-top: 205px;
     }
     &__wrapper {
-        background: url("/img/photo.jpeg") right no-repeat;
+        background: url("img/photo.jpeg") right no-repeat;
         position: relative;
         background-color: #ae4f57;
     }
