--- a/scss/blocks/_media.scss
+++ b/scss/blocks/_media.scss
@@ -151,7 +151,7 @@
 
 @media (max-width: 768px) {
     .promo__wrapper {
-        background: url(/img/photo.jpeg) no-repeat right/75%;
+        background: url(../img/photo.jpeg) no-repeat right/75%;
         background-color: #ae4f57;
         .container {
             max-width: 540px;
